--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,10 +9,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Build and Push to Docker Hub
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
+          push: ${{ env.push_to_dockerhub }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: sorinverescu/sorinvere
+          repository: sorinverescu/jenkins-agent-aws
           tag_with_ref: true
+
