--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,21 +1,72 @@
-name: Publish Docker image to DockerHub
+name: main
 on:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - main
   release:
-    types: [published]
+    types:
+      - created
+env:
+  push_to_dockerhub: true
+
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  getversion:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Build and Push to Docker Hub
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: 'Get Previous tag'
+        id: latesttag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+
+      - name: Split version tag
+        uses: xom9ikk/split@v1
+        id: version
+        with:
+          string: ${{ steps.latesttag.outputs.tag }}
+          separator: v
+          limit: -1
+
+      - name: 'conditions check'
+        run: echo ${{ steps.latesttag.outputs.tag }}
+
+    outputs:
+      version: ${{ steps.version.outputs._1 }}
+
+
+  publish-images:
+    needs: [ getversion ]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        release: [ latest ]
+        version: [ "${{ needs.getversion.outputs.version }}" ]
+        include:
+          - release: lts
+            version:
+    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: ${{ env.push_to_dockerhub }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: sorinverescu/jenkins-agent-aws
-          tag_with_ref: true
+          tags: sorinverescu/jenkins-agent-aws:latest
 
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
