--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,16 +18,10 @@ jobs:
 
   publish-images:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        release: [ latest ]
-        version: [ "${{ needs.getversion.outputs.version }}" ]
-        include:
-          - release: lts
-            version:
-    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
